--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,5 +3,5 @@ djangorestframework==3.14.0
 djangorestframework-jwt==1.11.0
 flake8==7.0.0
 python-dotenv==1.0.1
-psycopg2==2.9.9
+psycopg2-binary==2.9.3
 django-cors-headers==4.3.1
