Implemented nginx and gunicorn for request handling

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 
 volumes:
   pg_data:
+  static:
 
 services:
   db:
@@ -12,5 +13,13 @@ services:
   backend:
     build: ./backend/
     env_file: .env
+    volumes:
+      - static:/backend_static
     depends_on:
       - db
+  gateway:
+    build: ./gateway/
+    volumes:
+      - static:/staticfiles/
+    ports:
+      - 8000:80
